apps/aura/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aura
  namespace: media
spec:
  selector:
    matchLabels:
      app: aura
  template:
    metadata:
      labels:
        app: aura
      namespace: media
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker1
      containers:
        - name: aura
          securityContext:
            privileged: true
          image: ghcr.io/mediux-team/aura
          imagePullPolicy: Always
          imagePullSecrets:
            - name: ghcr-auth
          ports:
            - containerPort: 3000
            - containerPort: 8888
          volumeMounts:
            - name: aura-config
              mountPath: /config
            - name: mediamount
              mountPath: /mnt
              mountPropagation: HostToContainer
          resources:
            requests:
              nextflow.io/fuse: "1"
            limits:
              nextflow.io/fuse: "1"
      volumes:
        - name: aura-config
          persistentVolumeClaim:
            claimName: aura-config-pvc
        - name: mediamount
          persistentVolumeClaim:
            claimName: media-pvc
