apps/aura/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: aura
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.alixroden.co.uk
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`aura.alixroden.co.uk`)
      kind: Rule
      services:
        - name: aura
          port: 8181
          namespace: media
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
  ingressClassName: traefik
  tls:
    secretName: alixroden-co-uk-tls
