apps/aura/out.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aura
  name: aura
  namespace: media
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  - name: api
    port: 8888
    targetPort: 8888
  selector:
    app: aura
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aura
  namespace: media
spec:
  selector:
    matchLabels:
      app: aura
  template:
    metadata:
      labels:
        app: aura
      namespace: media
    spec:
      containers:
      - env:
        - name: PGID
          value: "1000"
        - name: PUID
          value: "1000"
        - name: UMASK
          value: "002"
        - name: TZ
          value: Europe/Helsinki
        image: ghcr.io/mediux-team/aura
        imagePullPolicy: Always
        name: aura
        ports:
        - containerPort: 3000
        - containerPort: 8888
        resources:
          limits:
            nextflow.io/fuse: "1"
          requests:
            nextflow.io/fuse: "1"
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /config
          name: aura-config
        - mountPath: /mnt
          mountPropagation: HostToContainer
          name: mediamount
      imagePullSecrets:
      - name: ghcr-auth
      nodeSelector:
        kubernetes.io/hostname: worker1
      volumes:
      - name: aura-config
        persistentVolumeClaim:
          claimName: aura-config-pvc
      - name: mediamount
        persistentVolumeClaim:
          claimName: media-pvc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.alixroden.co.uk
  name: aura
  namespace: media
spec:
  entryPoints:
  - websecure
  ingressClassName: traefik
  routes:
  - kind: Rule
    match: Host(`aura.alixroden.co.uk`)
    middlewares:
    - name: traefik-forward-auth
      namespace: traefik
    services:
    - name: aura
      namespace: media
      port: 8181
      scheme: http
  tls:
    secretName: alixroden-co-uk-tls
